Fix wrapping, position of Alias records in Vulnerability details templates
Reference: https://github.com/nexB/vulnerablecode/issues/864

--- a/vulnerablecode/static/css/custom.css
+++ b/vulnerablecode/static/css/custom.css
@@ -177,7 +177,7 @@ code {
 }
 
 .two-col-left {
-    width: 150px;
+    width: 160px;
     text-align: right !important;
     font-weight: bold;
     padding-right: 20px !important;
